--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,14 @@
 
   .intro {
 
+    .header-image {
+
+      img {
+        border-radius: 5px;
+        padding-top: 1px;
+      }
+    }
+
     h2 {
       padding: 15px;
     }
