--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,38 @@
 // Navigation code here
+nav {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: table;
+  position: relative;
+  text-align: center;
+  height: 90px;
+
+  .wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+
+  }
+
+  a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 1em 1.2em 0 1.2em;
+    color: @nav-font;
+  }
+
+  .space-walkers {
+    padding: 2em 0 0 0;
+  }
+
+}
+
+.nav-wrap {
+  width: 100%;
+  padding-bottom: 20px;
+  background-color: @nav-bg;
+  border: 0.5px solid @nav-border;
+
+}
