--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,8 @@ html {
   font-size: 62.5%;
 }
 html,
-body {
+body,
+button {
   font-family: 'Ubuntu', sans-serif;
   color: #5E6164;
 }
@@ -163,6 +164,12 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 98%;
+    margin: 0 auto;
+  }
+}
 nav {
   max-width: 800px;
   width: 100%;
@@ -178,11 +185,21 @@ nav .wrap {
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 }
+@media (max-width: 500px) {
+  nav .wrap {
+    width: 100%;
+  }
+}
 nav a {
   text-decoration: none;
   display: inline-block;
   padding: 1em 1.2em 0 1.2em;
   color: #454A59;
+}
+@media (max-width: 500px) {
+  nav a {
+    padding: 1em 1.2em 0 1.2em;
+  }
 }
 nav .space-walkers {
   padding: 2em 0 0 0;
@@ -206,6 +223,7 @@ footer {
 .home .intro .header-image img {
   border-radius: 5px;
   padding-top: 1px;
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -224,6 +242,21 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -240,8 +273,19 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 15px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -249,9 +293,43 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  padding: 5px 15px 5px 15px;
+  font-size: 2rem;
+  border-radius: 8px;
+  background-color: #23293B;
+  color: white;
+  outline: 0;
+  cursor: pointer;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    padding: 20px 15px 20px 15px;
+    font-size: 2rem;
+    border-radius: 8px;
+    background-color: #23293B;
+    color: white;
+    outline: 0;
+    cursor: pointer;
+    width: 100%;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  color: #23293B;
+  background-color: white;
+  border: transparent;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.17);
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+    padding-bottom: 35px;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
