--- a/less/global.less
+++ b/less/global.less
@@ -7,7 +7,7 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
+html, body, button {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
 }
@@ -38,5 +38,10 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
+
+  @media @phone {
+    width: 98%;
+    margin: 0 auto;
+  }
 }
 
