--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,6 +9,7 @@
       img {
         border-radius: 5px;
         padding-top: 1px;
+        width: 100%;
       }
     }
 
@@ -33,6 +34,24 @@
       border-radius: 20px;
       height: 100%;
     }
+
+    .blast {
+      @media @phone {
+        width: 100%;
+      }
+    }
+
+    .sky {
+      @media @phone {
+        display: none;
+      }
+    }
+
+    .launch {
+      @media @phone {
+        display: none;
+      }
+    }
   }
 
   .visit-planets {
@@ -54,8 +73,17 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      padding: 15px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -66,12 +94,29 @@
       }
 
       .btn {
+        .button(5px, 5px);
+
+        @media @phone {
+          .button(20px, 20px);
+          width: 100%;
+        }
+      }
+
+      .btn:hover {
+        .box-hover();
+        .box-shadow();
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+        padding-bottom: 35px;
+      }
       
       img {
         width: 100%;
