--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,6 +14,10 @@ nav {
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
 
+    @media @phone {
+      width: 100%;
+    }
+
   }
 
   a {
@@ -21,6 +25,11 @@ nav {
     display: inline-block;
     padding: 1em 1.2em 0 1.2em;
     color: @nav-font;
+
+    @media @phone {
+      padding: 1em 1.2em 0 1.2em;
+      
+    }
   }
 
   .space-walkers {
