--- a/less/navigation.less
+++ b/less/navigation.less
@@ -43,5 +43,7 @@ nav {
   padding-bottom: 20px;
   background-color: @nav-bg;
   border: 0.5px solid @nav-border;
-
+  position: fixed;
+  top: 0;
+  opacity: 0.9;
 }
