--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,11 +5,12 @@
   .intro {
 
     .header-image {
-
+      
       img {
-        border-radius: 8px;
-        padding-top: 113px;
+        border-radius: 10px;
+        margin-top: 113px;
         width: 100%;
+        height: auto;
       }
     }
 
