--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,12 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 800px) {
+  .home .intro .header-image {
+    padding-right: 1px;
+    padding-left: 1px;
+  }
+}
 .home .intro .header-image img {
   border-radius: 10px;
   margin-top: 113px;
