--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,11 @@
   .intro {
 
     .header-image {
+
+      @media @tablet {
+        padding-right: 1px;
+        padding-left: 1px;
+      }
       
       img {
         border-radius: 10px;
